--- a/templates/internalIndex.html
+++ b/templates/internalIndex.html
@@ -13,12 +13,20 @@
     <body class="leading-normal tracking-normal bg-cover bg-teal-900 text-white" >
     <div>
         <h1 class="text-3xl">People in Robotics</h1>
-        <!-- Uncomment the following if testing with local MongoDB uaa-robo -->
+
         
-        
+
+        <!--Alternative test queries using customer db-->
+        {% for individual in person.find() %}
+        <p> Name: {{ individual["Fname"] }} {{ individual["Lname"] }} | UAA ID: {{ individual["UA_ID"] }}</p>
+        {% endfor %}  
+
+        <!--
         {% for customers in person.find() %}
         <p> Name: {{ customers["name"] }} {{ customers["address"] }} | UAA ID: {{ customers["username"] }}</p>
-        {% endfor %}
+        {% endfor %}  
+        -->
+
        
 
 
