Updated picture and video links on homepage. Reformatted internal task listing page.

--- a/templates/home.html
+++ b/templates/home.html
@@ -131,7 +131,7 @@
 
           <div class="absolute w-3/5 top-0 right-0  h-full">
             <video autoplay loop muted class="w-full  min-h-full absolute object-cover">
-              <source src="bot.mp4" type="video/mp4"/>
+              <source src="static/bot.mp4" type="video/mp4"/>
               Robotic driving
             </video>
           </div>
@@ -178,11 +178,11 @@
 
         <!--3rd row: images-->
         <div class="flex overflow-x-scroll">
-            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="teamPics/1.png" alt="Team members working on the VEX Robot">
-            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="teamPics/2.png" alt="Team members programming">
-            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="teamPics/3.png" alt="Team members working on the VEX Robot">
-            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="teamPics/4.png" alt="Team members working on the VEX Robot">
-            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="teamPics/5.png" alt="Team members">
+            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="static/teamPics/1.png" alt="Team members working on the VEX Robot">
+            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="static/teamPics/2.png" alt="Team members programming">
+            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="static/teamPics/3.png" alt="Team members working on the VEX Robot">
+            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="static/teamPics/4.png" alt="Team members working on the VEX Robot">
+            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="static/teamPics/5.png" alt="Team members">
         </div>
 
       <!--4th row: statistics-->
