--- a/templates/home.html
+++ b/templates/home.html
@@ -8,9 +8,9 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}">
 
-
+    test
   </head>
   <body class="leading-normal tracking-normal bg-cover bg-teal-900" > <!--style="background-image: url('background.png');" --> 
 
@@ -19,7 +19,7 @@
       <nav class="flex items-center justify-between flex-wrap p-6">
         <div class="flex items-center flex-shrink-0 text-white mr-6">
           <a class="flex items-center text-amber-400 hover:underline font-bold text-2xl lg:text-4xl" href="/">
-            UAA <span class="bg-clip-text text-white ">Robotics</span>
+            UAA <span class="bg-clip-text text-white">Robotics</span>
           </a>
         </div>
 
@@ -208,7 +208,7 @@
         
         
       </div>
-
+  <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
 
   </body>
 </html>
