Lots of file structure revision

--- a/docs/templates/index.html
+++ b/docs/templates/index.html
@@ -28,35 +28,25 @@
 
   <body class="leading-normal tracking-normal bg-cover bg-teal-900" > <!--style="background-image: url('background.png');" --> 
 
-
       <!--Nav-->
       <nav class="flex items-center justify-between flex-wrap px-6">
         
         <div class="sm:w-2/12 flex items-center mx-auto pl-2">
-          <a href="index.html">
+          <a href="./index.html">
             <!--UAA <span class="bg-clip-text text-white ">Robotics</span> -->
-            <img class="object-fit w-48" src="roboLogo.png" alt="Robotics Logo">
+            <img class="object-fit w-48" src="../static/images/website_default/roboLogo.png" alt="Robotics Logo">
           </a>
         </div>
 
-        <!-- Hamburger button that can be used later w/ python/js
-        <div class="block lg:hidden">
-          
-          <button class="flex items-center px-3 py-2 border rounded text-white hover:text-yellow-300 hover:border-yellow-300">
-            <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
-          </button>
-          
-        </div>
-        -->
         <div class="w-full flex-wrap block sm:w-7/12 flex-grow sm:ml-6 flex items-center w-auto">
           <div class="text-base flex-grow menlo" style="font-size: 1.5rem;">
-            <a href="projects.html" class="block mt-4 inline-block sm:mt-0 text-white hover:text-yellow-300 mr-4">
+            <a href="./projects.html" class="block mt-4 inline-block sm:mt-0 text-white hover:text-yellow-300 mr-4">
               Projects
             </a>
-            <a href="outreach.html" class="block mt-4 inline-block sm:mt-0 text-white hover:text-yellow-300 mr-4">
+            <a href="./outreach.html" class="block mt-4 inline-block sm:mt-0 text-white hover:text-yellow-300 mr-4">
               Outreach
             </a>
-            <a href="fund.html" class="block mt-4 inline-block sm:mt-0 text-white hover:text-yellow-300">
+            <a href="./fund.html" class="block mt-4 inline-block sm:mt-0 text-white hover:text-yellow-300">
               Funding
             </a>
           </div>
@@ -165,7 +155,7 @@
 
           <div class="absolute w-3/5 top-0 right-0  h-full">
             <video autoplay loop muted class="w-full  min-h-full absolute object-cover">
-              <source src="teamwalkin.mp4" type="video/mp4"/>
+              <source src="../static/videos/teamwalkin.mp4" type="video/mp4"/>
               Robotic driving
             </video>
           </div>
@@ -234,11 +224,11 @@
 
         <!--Images-->
         <div class="flex overflow-x-scroll hide-scrollbar mt-10"> <!--hide-scrollbar is NOT tailwind-->
-            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="teamPics/1.png" alt="Team members working on the VEX Robot">
-            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="teamPics/2.png" alt="Team members programming">
-            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="teamPics/3.png" alt="Team members working on the VEX Robot">
-            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="teamPics/4.png" alt="Team members working on the VEX Robot">
-            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="teamPics/5.png" alt="Team members">
+            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="../static/images/teamPics/1.png" alt="Team members working on the VEX Robot">
+            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="../static/images/teamPics/2.png" alt="Team members programming">
+            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="../static/images/teamPics/3.png" alt="Team members working on the VEX Robot">
+            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="../static/images/teamPics/4.png" alt="Team members working on the VEX Robot">
+            <img class="m-4 w-96 object-contain rounded-lg inline-block" src="../static/images/teamPics/5.png" alt="Team members">
         </div>
 
 
