--- a/docs/templates/fund.html
+++ b/docs/templates/fund.html
@@ -22,6 +22,7 @@
     }
     </style>
 
+    <link rel="stylesheet" type="text/css" href="../static/css/donator.css">
 
   </head>
 
@@ -32,9 +33,9 @@
       <nav class="flex items-center justify-between flex-wrap px-6">
         
         <div class="sm:w-2/12 flex items-center mx-auto pl-2">
-          <a href="index.html">
+          <a href="./index.html">
             <!--UAA <span class="bg-clip-text text-white ">Robotics</span> -->
-            <img class="object-fit w-48" src="roboLogo.png" alt="Robotics Logo">
+            <img class="object-fit w-48" src="../static/images/website_default/roboLogo.png" alt="Robotics Logo">
           </a>
         </div>
 
@@ -49,13 +50,13 @@
         -->
         <div class="w-full flex-wrap block sm:w-7/12 flex-grow sm:ml-6 flex items-center w-auto">
           <div class="text-base flex-grow menlo" style="font-size: 1.5rem;">
-            <a href="projects.html" class="block mt-4 inline-block sm:mt-0 text-white hover:text-yellow-300 mr-4">
+            <a href="./projects.html" class="block mt-4 inline-block sm:mt-0 text-white hover:text-yellow-300 mr-4">
               Projects
             </a>
-            <a href="outreach.html" class="block mt-4 inline-block sm:mt-0 text-white hover:text-yellow-300 mr-4">
+            <a href="./outreach.html" class="block mt-4 inline-block sm:mt-0 text-white hover:text-yellow-300 mr-4">
               Outreach
             </a>
-            <a href="fund.html" class="block mt-4 inline-block sm:mt-0 text-white hover:text-yellow-300">
+            <a href="./fund.html" class="block mt-4 inline-block sm:mt-0 text-white hover:text-yellow-300">
               Funding
             </a>
           </div>
@@ -133,11 +134,18 @@
           <!--<img class="flex m-4 w-1/2 md:w-96 mx-auto" src="" alt=""-->
             <ul>
                 <li>
-                    <img class="m-4 w-1/2 md:w-96 mx-auto" src="./sponsors/ENSTAR Logo on White.png" alt="ENSTAR">
+                    <img class="m-4 w-1/2 md:w-96 mx-auto" src="../static/images/sponsors/ENSTAR Logo on White.png" alt="ENSTAR">
                 </li>
                 <li>
-                    <p class="text-4xl text-center" style="font-style: oblique;">Quint Bagcal</p>
+                    <p class="donator">Quint Bagcal</p>
                 </li>
+                <li>
+                  <img class="m-4 w-1/2 md:w-96 mx-auto" src="../static/images/sponsors/Arctic IT Logo_RGB-01.jpg" alt="Arctic IT">
+                </li>
+                <li>
+                  <img class="m-4 w-1/2 md:w-96 mx-auto" src="../static/images/sponsors/Hilcorp Logo.png" alt="Hilcorp">
+                </li>
+
             </ul>
           
 
