finished restructuring the filestructure of our website

--- a/docs/templates/outreach.html
+++ b/docs/templates/outreach.html
@@ -34,7 +34,7 @@
         <div class="sm:w-2/12 flex items-center mx-auto pl-2">
           <a href="index.html">
             <!--UAA <span class="bg-clip-text text-white ">Robotics</span> -->
-            <img class="object-fit w-48" src="roboLogo.png" alt="Robotics Logo">
+            <img class="object-fit w-48" src="../static/images/website_default/roboLogo.png" alt="Robotics Logo">
           </a>
         </div>
 
@@ -164,7 +164,7 @@
         <div class=" flex w-full overflow-x-scroll mx-4 p-4 items-center  ">
           <div class = "mx-1">
             <div class="w-96 h-96 rounded-lg overflow-hidden bg-gray-200 shadow-xl">
-              <img class="object-cover w-full h-52" src="outreachPics/stemDay.png" alt="UAA STEM Day">
+              <img class="object-cover w-full h-52" src="../static/images/outreachPics/stemDay.png" alt="UAA STEM Day">
               <div class="px-6 py-4">
                 <div class="font-bold text-xl ">UAA STEM Day</div>
                 <div class="mb-2">1 Oct 2022</div>
@@ -178,7 +178,7 @@
 
           <div class = "mx-1">
             <div class="w-96 h-96 rounded-lg overflow-hidden bg-gray-200 shadow-xl">
-              <img class="object-cover w-full h-52" src="outreachPics/halloween.png" alt="UAA Haunted Halloween Night">
+              <img class="object-cover w-full h-52" src="../static/images/outreachPics/halloween.png" alt="UAA Haunted Halloween Night">
               <div class="px-6 py-2">
                 <div class="font-bold text-xl ">UAA Haunted Halloween Night</div>
                 <div class="mb-2">29 Oct 2022</div>
@@ -194,7 +194,7 @@
 
           <div class = "mx-1">
             <div class="w-96 h-96 rounded-lg overflow-hidden bg-gray-200 shadow-xl">
-              <img class="object-cover w-full h-52" src="outreachPics/getaway.png" alt="UAA Getaway">
+              <img class="object-cover w-full h-52" src="../static/images/outreachPics/getaway.png" alt="UAA Getaway">
               <div class="px-6 py-2">
                 <div class="font-bold text-xl ">UAA Getaway</div>
                 <div class="mb-2">9 Dec 2022</div>
@@ -216,7 +216,7 @@
       <div class=" flex w-full overflow-x-scroll mx-4 p-4 items-center  ">
           <div class = "mx-1">
             <div class="w-96 h-96 rounded-lg overflow-hidden bg-gray-200 shadow-xl">
-              <img class="object-cover w-full h-52" src="outreachPics/soldering.png" alt="Soldering Workshop">
+              <img class="object-cover w-full h-52" src="../static/images/outreachPics/soldering.png" alt="Soldering Workshop">
               <div class="px-6 py-2">
                 <div class="font-bold text-xl ">Soldering Workshop</div>
                 <div class="mb-2">7 Oct 2022</div>
@@ -230,7 +230,7 @@
 
           <div class = "mx-1">
             <div class="w-96 h-96 rounded-lg overflow-hidden bg-gray-200 shadow-xl">
-              <img class="object-cover w-full h-52" src="outreachPics/3dPrinting.png" alt="3D Printing Workshop">
+              <img class="object-cover w-full h-52" src="../static/images/outreachPics/3dPrinting.png" alt="3D Printing Workshop">
               <div class="px-6 py-2">
                 <div class="font-bold text-xl ">3D Printing Workshop</div>
                 <div class="mb-2">18 Nov 2022</div>
@@ -254,7 +254,7 @@
         <div class=" flex w-full overflow-x-scroll mx-4 p-4 items-center  ">
           <div class = "mx-1">
             <div class="w-96 h-96 rounded-lg overflow-hidden bg-gray-200 shadow-xl">
-              <img class="object-cover w-full h-52" src="outreachPics/SAME.png" alt="SAME">
+              <img class="object-cover w-full h-52" src="../static/images/outreachPics/SAME.png" alt="SAME">
               <div class="px-6 py-2">
                 <div class="font-bold text-xl ">SAME</div>
                 <div class="mb-2">23 Feb 2023</div>
