--- a/docs/templates/projects.html
+++ b/docs/templates/projects.html
@@ -34,7 +34,7 @@
         <div class="sm:w-2/12 flex items-center mx-auto pl-2">
           <a href="index.html">
             <!--UAA <span class="bg-clip-text text-white ">Robotics</span> -->
-            <img class="object-fit w-48" src="roboLogo.png" alt="Robotics Logo">
+            <img class="object-fit w-48" src="../static/images/website_default/roboLogo.png" alt="Robotics Logo">
           </a>
         </div>
 
@@ -280,7 +280,7 @@
             <div class=" flex overflow-x-scroll md:w-3/5 items-center ">
               <div class = "mx-1">
               <div class="w-80 h-96 rounded-lg overflow-hidden bg-gray-200 shadow-xl">
-                <img class="w-full" src="robotPics/robotLoad.png" alt="Robot Front">
+                <img class="w-full" src="../static/images/robotPics/robotLoad.png" alt="Robot Front">
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Robot Front</div>
                   <p class="text-gray-700 text-base">
@@ -292,7 +292,7 @@
 
             <div class = "mx-1">
               <div class="w-80 h-96 rounded-lg mx-3 overflow-hidden bg-gray-200 shadow-lg">
-                <img class="w-full" src="robotPics/robotShooter.png" alt="Robot Back">
+                <img class="w-full" src="../static/images/robotPics/robotShooter.png" alt="Robot Back">
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Robot Back</div>
                   <p class="text-gray-700 text-base">
@@ -304,7 +304,7 @@
 
             <div class = "mx-1">
               <div class="w-80 h-96 rounded-lg mx-3 overflow-hidden bg-gray-200 shadow-lg">
-                <img class="w-full" src="robotPics/robotDrive.png" alt="Robot Drive Train">
+                <img class="w-full" src="../static/images/robotPics/robotDrive.png" alt="Robot Drive Train">
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Robot Drive Train</div>
                   <p class="text-gray-700 text-base">
@@ -394,7 +394,7 @@
 
               <div class = "mx-1">
                 <div class="w-80 h-96 rounded-lg overflow-hidden bg-gray-200 shadow-xl">
-                  <img class="w-full" src="robotPics/CoffeeBotMVP1.png" alt="CoffeeBot MVC">
+                  <img class="w-full" src="../static/images/robotPics/CoffeeBotMVP1.png" alt="CoffeeBot MVC">
                   <div class="px-6 py-4">
                     <div class="font-bold text-xl mb-2">MVC  </div>
                     <p class="text-gray-700 text-base">
@@ -407,7 +407,7 @@
 
               <div class = "mx-1">
               <div class="w-80 h-96 rounded-lg overflow-hidden bg-gray-200 shadow-xl">
-                <img class="w-full" src="robotPics/CoffeebotClaw.png" alt="CoffeeBot Claw V1">
+                <img class="w-full" src="../static/images/robotPics/CoffeebotClaw.png" alt="CoffeeBot Claw V1">
                 <div class="px-6 py-4">
                   <div class="font-bold text-xl mb-2">Claw Design Version 1.0</div>
                   <p class="text-gray-700 text-base">
