--- a/docs/templates/fund.html
+++ b/docs/templates/fund.html
@@ -166,10 +166,10 @@
           </div>
           <div class="ml-5 flex flex-wrap w-1/2">
             <div class="flex  w-full lg:w-1/2">
-              <img class=" m-3 w-96 rounded-lg mx-auto" src="fundPics/tshirt.png" alt="Team members working on the VEX Robot">
+              <img class=" m-3 w-96 rounded-lg mx-auto" src="../static/images/fundPics/tshirt.png" alt="Team members working on the VEX Robot">
             </div>
             <div class="flex w-full hidden lg:block lg:w-1/2 lg:pl-3"> <!-- This is hidden at small sizes-->
-              <img class=" m-3 w-96 rounded-lg mx-auto" src="fundPics/hoodie.png" alt="Team members working on the VEX Robot">
+              <img class=" m-3 w-96 rounded-lg mx-auto" src="../static/images/fundPics/hoodie.png" alt="Team members working on the VEX Robot">
             </div>
           </div>
         </div>
@@ -284,7 +284,7 @@
         <h1 class="w-full text-4xl"> Donation Tiers</h1>
         <p>To recognize your support, we have created support tiers for the 2023-2024 season. 
           We greatly appreciate all donations!</p>
-        <img class=" flex m-4 xl:w-3/4  mx-auto" src="fundPics/teirs.png" alt="Team members working on the VEX Robot">
+        <img class=" flex m-4 xl:w-3/4  mx-auto" src="../static/images/fundPics/teirs.png" alt="Team members working on the VEX Robot">
       </div>
 
 
@@ -298,7 +298,7 @@
         
         <div class = "mx-1">
           <div class="w-96 h-96 rounded-lg overflow-hidden bg-gray-200 shadow-xl">
-            <img class="object-cover w-full h-52" src="fundPics/vexParts.png" alt=" VEX Parts">
+            <img class="object-cover w-full h-52" src="../static/images/fundPics/vexParts.png" alt=" VEX Parts">
             <div class="px-6 py-4">
               <div class="font-bold text-xl ">UAA Special Project Fund & Club Council Fund </div>
               <div class="mb-2">Sep 2022</div>
@@ -311,7 +311,7 @@
 
         <div class = "mx-1">
           <div class="w-96 h-96 rounded-lg overflow-hidden bg-gray-200 shadow-xl">
-            <img class="object-cover w-full h-52" src="fundPics/waterPolo.png" alt="UAA Inner tube Water Polo">
+            <img class="object-cover w-full h-52" src="../static/images/fundPics/waterPolo.png" alt="UAA Inner tube Water Polo">
             <div class="px-6 py-2">
               <div class="font-bold text-xl ">UAA Inner Tube Water Polo Event</div>
               <div class="mb-2">13 Oct 2022</div>
@@ -324,7 +324,7 @@
 
         <div class = "mx-1">
           <div class="w-96 h-96 rounded-lg overflow-hidden bg-gray-200 shadow-xl">
-            <img class="object-cover w-full h-52" src="fundPics/volleyBake.png" alt="Bake Sale">
+            <img class="object-cover w-full h-52" src="../static/images/fundPics/volleyBake.png" alt="Bake Sale">
             <div class="px-6 py-2">
               <div class="font-bold text-xl ">Bake Sale @ Pack the House UAA Volleyball Gam</div>
               <div class="mb-2">5 Nov 2022</div>
@@ -337,7 +337,7 @@
         
         <div class = "mx-1">
           <div class="w-96 h-96 rounded-lg overflow-hidden bg-gray-200 shadow-xl">
-            <img class="object-cover w-full h-52" src="fundPics/hockeyBake.png" alt="Bake Sale">
+            <img class="object-cover w-full h-52" src="../static/images/fundPics/hockeyBake.png" alt="Bake Sale">
             <div class="px-6 py-2">
               <div class="font-bold text-xl ">Bake Sale @ UAA Hockey Games</div>
               <div class="mb-2">5-6 Nov 2022</div>
@@ -351,7 +351,7 @@
 
         <div class = "mx-1">
           <div class="w-96 h-96 rounded-lg overflow-hidden bg-gray-200 shadow-xl">
-            <img class="object-cover w-full h-52" src="fundPics/field.png" alt="Field">
+            <img class="object-cover w-full h-52" src="../static/images/fundPics/field.png" alt="Field">
             <div class="px-6 py-2">
               <div class="font-bold text-xl ">REC Grant</div>
               <div class="mb-2">Dec 2022</div>
