--- a/docs/templates/projects.html
+++ b/docs/templates/projects.html
@@ -32,7 +32,7 @@
       <nav class="flex items-center justify-between flex-wrap px-6">
         
         <div class="sm:w-2/12 flex items-center mx-auto pl-2">
-          <a href="index.html">
+          <a href="../index.html">
             <!--UAA <span class="bg-clip-text text-white ">Robotics</span> -->
             <img class="object-fit w-48" src="../static/images/website_default/roboLogo.png" alt="Robotics Logo">
           </a>
