Fixed left funding sidebar

--- a/docs/templates/fund.html
+++ b/docs/templates/fund.html
@@ -137,7 +137,7 @@
                     <img class="m-4 w-1/2 md:w-96 mx-auto" src="../static/images/sponsors/ENSTAR Logo on White.png" alt="ENSTAR">
                 </li>
                 <li>
-                    <p class="donator">Quint Bagcal</p>
+                    <p class="text-5xl xl:text-7xl text-center font-bold text-teal-900">Quint Bagcal</p>
                 </li>
                 <li>
                   <img class="m-4 w-1/2 md:w-96 mx-auto" src="../static/images/sponsors/Arctic IT Logo_RGB-01.jpg" alt="Arctic IT">
@@ -153,7 +153,7 @@
       </div>
 
       <!--Top right column-->
-      <div class = "flex flex-wrap md:w-3/4">
+      <div class = "flex flex-wrap w-full md:w-3/4">
       <!--Merch-->
       <div class = "flex w-full ">
         <div class="flex w-full bg-white md:ml-5 md:mt-0 mt-5 p-10 rounded-lg items-center">
