Updated Merch Link

--- a/docs/templates/fund.html
+++ b/docs/templates/fund.html
@@ -158,18 +158,18 @@
       <div class = "flex w-full ">
         <div class="flex w-full bg-white md:ml-5 md:mt-0 mt-5 p-10 rounded-lg items-center">
           <div class="flex w-full md:w-1/2 mr-2">
-            <p class ="text-black text-4xl font-bold">
+            <p class ="text-black text-4xl font-bold xl:text-7xl">
               We have merch! Purchase it
-              <a href="https://my-store-d8eb7d.creator-spring.com/" class ="underline text-amber-400" target="_blank">here</a> 
+              <a href="shop.uaarobotics.com" class ="underline text-amber-400" target="_blank">here</a> 
               to support us.
             </p>
           </div>
           <div class="ml-5 flex flex-wrap w-1/2">
             <div class="flex  w-full lg:w-1/2">
-              <img class=" m-3 w-96 rounded-lg mx-auto" src="../static/images/fundPics/tshirt.png" alt="Team members working on the VEX Robot">
+              <img class=" m-3 w-72 rounded-lg mx-auto" src="../static/images/fundPics/tshirt.png" alt="Team members working on the VEX Robot">
             </div>
             <div class="flex w-full hidden lg:block lg:w-1/2 lg:pl-3"> <!-- This is hidden at small sizes-->
-              <img class=" m-3 w-96 rounded-lg mx-auto" src="../static/images/fundPics/hoodie.png" alt="Team members working on the VEX Robot">
+              <img class=" m-3 w-72 rounded-lg mx-auto" src="../static/images/fundPics/bag.png" alt="Team members working on the VEX Robot">
             </div>
           </div>
         </div>
