--- a/docs/templates/fund.html
+++ b/docs/templates/fund.html
@@ -160,7 +160,7 @@
           <div class="flex w-full md:w-1/2 mr-2">
             <p class ="text-black text-4xl font-bold xl:text-7xl">
               We have merch! Purchase it
-              <a href="shop.uaarobotics.com" class ="underline text-amber-400" target="_blank">here</a> 
+              <a href="https://www.shop.uaarobotics.com" class ="underline text-amber-400" target="_blank">here</a> 
               to support us.
             </p>
           </div>
